Revision history for Perl extension Error::Show.

v0.2.0 
  [features]
  - added limit option to limit number of errors processed
  - added reverse option to reverse sequence of outputs
  - added 'advanced' eval/string program processing. Gives source code
    processing options to isolate context generation to a range of lines
    within a string program.
     * start_mark   
     * end_mark
     * start_offset
     * end_offset

  [fixes]
  - Removed unused code

  [pod]


v0.1.1  2023-01-22
  [tests]
  - fixed failing frame test on perl 5.26/5.24
  
  [pod]
  - Fixed up eval example
  - Fixed typos reported by W.Braswell

  [other]
  - updated Makefile.PL and .gitignore with repo settings. Thankyou to mrdvt92
    via github.

v0.1.0  2023-01-18
	- original version
